--- a/PetMate/src/components/JanelaPet.css
+++ b/PetMate/src/components/JanelaPet.css
@@ -1,6 +1,3 @@
-@import "slick-carousel/slick/slick-theme.css";
-@import "slick-carousel/slick/slick.css";
-
 .janela-pet-container {
     display: flex;
 }
@@ -27,42 +24,52 @@
         opacity: 0;
         transform: scale(0.8);
     }
+
     10% {
         opacity: 0.1;
         transform: scale(0.82);
     }
+
     20% {
         opacity: 0.2;
         transform: scale(0.84);
     }
+
     30% {
         opacity: 0.3;
         transform: scale(0.86);
     }
+
     40% {
         opacity: 0.4;
         transform: scale(0.88);
     }
+
     50% {
         opacity: 0.5;
         transform: scale(0.9);
     }
+
     60% {
         opacity: 0.6;
         transform: scale(0.92);
     }
+
     70% {
         opacity: 0.7;
         transform: scale(0.94);
     }
+
     80% {
         opacity: 0.8;
         transform: scale(0.96);
     }
+
     90% {
         opacity: 0.9;
         transform: scale(0.98);
     }
+
     100% {
         opacity: 1;
         transform: scale(1);
@@ -104,6 +111,7 @@
     cursor: pointer;
     transition: 0.3s;
 }
+
 .icon-fechar-denuncia:hover {
     color: #6b4f3a;
     transform: scale(1.05);
@@ -125,6 +133,7 @@
 .modal-pet-1 {
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 50%;
     margin: auto;
     /* align-items: center; */
@@ -171,8 +180,14 @@
     margin: auto;
     justify-content: center;
     align-items: center;
-    max-height: 10%;
+    min-height: 22rem;
+    max-height: 22rem;
+    min-width: 45rem;
+    max-width: 45rem;
+    /* border: solid; */
+    /* width: fit-content; */
 }
+
 .map-foto-pet {
     /* width: fit-content; */
     /* height: fit-content; */
@@ -191,14 +206,15 @@
     /* border: solid 1px #ccc; */
     /* border-radius: 4px; */
     /* padding: 10px; */
-  }
-  
-  .pet-image-janela img {
+}
+
+.pet-image-janela img {
     height: auto;
     border-radius: 8px;
     /* width: 150px;  */
     /* object-fit: cover;  */
-  }
+}
+
 .pet_modal_container {
     position: fixed;
     inset: 0;
@@ -210,7 +226,7 @@
     z-index: 1000;
 }
 
-.pet-image-modal{
+.pet-image-modal {
     width: 100%;
     height: 250px;
     object-fit: cover;
@@ -220,24 +236,24 @@
 .slick-slider,
 .slick-list,
 .slick-track {
-  width: 100% !important;
-  height: auto !important;
-  box-sizing: border-box;
+    width: 100% !important;
+    height: auto !important;
+    box-sizing: border-box;
 }
 
 .slick-slide {
-  /* display: flex !important; */
-  /* justify-content: center; */
-  /* align-items: center; */
-  height: auto !important;
+    /* display: flex !important; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    height: auto !important;
 }
 
 .map-foto-pet {
-  width: 100% !important;
-  height: auto !important;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    width: 100% !important;
+    height: auto !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .pet-image-janela {
@@ -247,7 +263,7 @@
     height: auto;
     margin: auto;
     display: block;
-  }
+}
 
 .container-pet-modal {
     display: flex;
@@ -284,7 +300,7 @@ strong {
     color: black;
     font-size: 20px;
     font-weight: normal;
-    
+
 }
 
 
@@ -305,7 +321,7 @@ strong {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.descPet{
+.descPet {
     font-size: 20px;
     text-align: start;
 
@@ -320,6 +336,7 @@ strong {
     margin-bottom: 20px;
     width: 100%;
 }
+
 .desc-title-2 {
     color: #84644D;
     font-size: 24px;
@@ -352,9 +369,10 @@ strong {
     background-color: #f9f9f9;
     border: 1px solid #ddd;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-    
+
 }
-.pet-tag-container{
+
+.pet-tag-container {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -362,7 +380,7 @@ strong {
     gap: 15px;
 }
 
-.pet-tag{
+.pet-tag {
     font-size: 1.2rem;
     background-color: #f0efee;
     border: solid 1px #654833;
@@ -372,6 +390,7 @@ strong {
     /* font-family: 'Nunito'; */
     /* font-family: nunito; */
 }
+
 .info-doador-modal {
     background-color: #EBE5E0;
     border: #654833 solid 2px;
@@ -388,13 +407,13 @@ strong {
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
 }
 
-.info-condicoes-pet{
+.info-condicoes-pet {
     display: flex;
     flex-direction: column;
     margin-top: 30px;
 }
 
-.info-condicoes{
+.info-condicoes {
     font-size: 20px;
 }
 
@@ -446,7 +465,7 @@ strong {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+
 }
 
 .dados-endereco {
@@ -475,6 +494,7 @@ strong {
     font-size: 40px;
     transition: 0.3s;
 }
+
 .icon_wpp:hover {
     color: #2aad5a;
 }
@@ -516,11 +536,11 @@ strong {
     color: #654833;
 }
 
-.icon-denuncia-pet{
+.icon-denuncia-pet {
     font-size: 25px;
 }
 
-.texto-denunciar-pet p{
+.texto-denunciar-pet p {
     font-size: 20px;
     font-family: 'Nunito';
     font-weight: bold;
@@ -533,6 +553,15 @@ strong {
     transition: color 0.3s ease;
 }
 
+
+.carrossel-img-pet .carrossel-anunciar-pet-imagem-wrapper {
+  /* Permite que a imagem cresça para preencher o contentor */
+  max-height: 100%;
+  max-width: 100%;
+
+  /* Garante que a imagem mantenha a sua proporção e não fique distorcida */
+  object-fit: contain;
+}
 
 @media (max-width: 768px) {
     .container_modal_pet {
@@ -562,7 +591,7 @@ strong {
 
 
 
-   
+
     .info-container,
     .info-doador-modal {
         width: 90%;
@@ -572,7 +601,7 @@ strong {
 
 
 
-    .descricao-pet{
+    .descricao-pet {
         width: 90%;
         font-size: 18px;
     }
@@ -635,7 +664,7 @@ strong {
 
 
 
-    .descricao-pet{
+    .descricao-pet {
         width: 93%;
         font-size: 16px;
         margin-top: 20px;
@@ -657,54 +686,55 @@ strong {
     }
 
 
-    .detalhes-pet p, strong{
+    .detalhes-pet p,
+    strong {
         font-size: 17px;
     }
 
 
-    .detalhes-pet h4{
+    .detalhes-pet h4 {
         font-size: 14px;
     }
 
 
-    .descPet{
+    .descPet {
         font-size: 16px;
     }
 
 
-    .pet-tag{
+    .pet-tag {
         font-size: 16px;
     }
 
 
-    .info-title{
+    .info-title {
         font-size: 21px;
     }
 
 
-    .info-doador-modal p{
+    .info-doador-modal p {
         font-size: 17px;
     }
 
 
-    .info-doador-modal h2{
+    .info-doador-modal h2 {
         font-size: 24px;
         margin-left: -20px;
     }
 
 
-    .info-doador-modal p{
+    .info-doador-modal p {
         font-size: 17px;
         margin-left: -20px;
     }
 
 
-    .titulo-pet-modal h2{
+    .titulo-pet-modal h2 {
         font-size: 28px;
     }
 
 
-    .barra-pet-modal{
+    .barra-pet-modal {
         width: 50%;
         height: 7px;
         margin-left: -170px;
@@ -712,7 +742,7 @@ strong {
     }
 
 
-    .botao-fechar-pet{
+    .botao-fechar-pet {
         width: 40px;
         height: 40px;
         font-size: 20px;
