--- a/PetMate/src/pages/Coleiras.css
+++ b/PetMate/src/pages/Coleiras.css
@@ -83,7 +83,7 @@
 }
 
 .botao-personalizar {
-    background-color: #654833;
+    background-color: #84644D;
     color: #f5f5f5;
     padding: 3px;
     width: 15rem;
